tests/fail/enum_named.stderr
error: Unsupported shape `named fields`. Expected no fields.
 --> tests/fail/enum_named.rs:3:10
  |
3 | #[derive(Variants)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Variants` (in Nightly builds, run with -Z macro-backtrace for more info)
